--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input:focus {
+  outline: none;
+  box-shadow: unset !important;
+}
+
+input {
+  outline: none !important;
+  border: none !important;
+  padding: 0 !important;
+}
